# main.tscn
# This is the main and only scene for the pxos_microkernel project.
# It provides a simple GUI for interacting with the PXOS, displaying the 8.png
# and allowing command input/output.

[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/8.png" type="Texture" id=2] # Ensure 8.png exists in assets/

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EightPNGDisplay" type="TextureRect" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 200.0
rect_min_size = Vector2(0, 200)
texture = ExtResource(2)
expand = true
stretch_mode = 6 # Keep aspect ratio, scale to fit, center

[node name="HSeparator1" type="HSeparator" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 1004.0
margin_bottom = 214.0

[node name="OutputDisplay" type="TextEdit" parent="VBoxContainer"]
margin_top = 224.0
margin_right = 1004.0
margin_bottom = 500.0
size_flags_vertical = 3
readonly = true
wrap_enabled = true
syntax_highlighting = true
show_line_numbers = false
smooth_scrolling = true
custom_colors/font_color = Color(0.9, 0.9, 0.9, 1)
custom_colors/background_color = Color(0.15, 0.15, 0.15, 1)

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 510.0
margin_right = 1004.0
margin_bottom = 514.0

[node name="InputContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 524.0
margin_right = 1004.0
margin_bottom = 554.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputField" type="LineEdit" parent="VBoxContainer/InputContainer"]
margin_right = 889.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "Type your command here (e.g., 'Hey PXOSBot, load roadmap initial_boot')"
focus_mode = 2 # Allow keyboard focus
custom_colors/font_color = Color(1, 1, 1, 1)
custom_colors/font_color_placeholder = Color(0.7, 0.7, 0.7, 1)
custom_colors/selection_color = Color(0.3, 0.3, 0.6, 1)
custom_colors/background_color = Color(0.2, 0.2, 0.2, 1)

[node name="SendButton" type="Button" parent="VBoxContainer/InputContainer"]
margin_left = 899.0
margin_right = 1004.0
margin_bottom = 30.0
text = "Send"
custom_colors/font_color = Color(1, 1, 1, 1)
custom_colors/font_color_hover = Color(0.9, 0.9, 0.9, 1)
custom_colors/font_color_pressed = Color(0.8, 0.8, 0.8, 1)
custom_styles/normal = SubResource(1) # Add a simple style for the button

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color(0.25, 0.45, 0.8, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_left = 5
corner_radius_bottom_right = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[connection signal="text_entered" from="VBoxContainer/InputContainer/InputField" to="." method="_on_InputField_text_entered"]
[connection signal="pressed" from="VBoxContainer/InputContainer/SendButton" to="." method="_on_SendButton_pressed"]
